Bug 77715 - FILEOPEN: LO Hangs: LO hangs while opening roundtrip file
Summary: FILEOPEN: LO Hangs: LO hangs while opening roundtrip file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-21 08:09 UTC by Dinesh
Modified: 2014-04-30 17:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains header, footer, endnotes, footnotes and text body (117.24 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 08:09 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-04-21 08:09:02 UTC
Created attachment 97670 [details]
File contains header, footer, endnotes, footnotes and text body

Problem description: 

Steps to reproduce:
1. Take the original file and do the roundtrip of it.
2. Then take the roundtrip file as original file and do the roundtrip of the same file once again.

Current behavior:
LibreOffice is not able to open the file after 1st round of roundtrip

Expected behavior:
LibreOffice should be able to open and save the file which is already roundtripped
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Jorendc 2014-04-21 09:44:43 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 619b4c40da9e85febbb08a3f7cf8aa8d10963fc1
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-04-18_00:07:53

Kind regards,
Joren
Comment 2 Dinesh 2014-04-24 09:22:01 UTC
- Pushed code changes for BUG 77715 - FILEOPEN: LO hangs while opening roundtrip file
- Issue found in TOC flag field \c
- Code added to check if SEQIdentifier is found then append SEQIdentifier after \c in "" and if not found then don't append blank ""
Comment 3 Commit Notification 2014-04-28 07:30:05 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c865de60a769cc99c25050652aaad751771b2249

fdo#77715: Fix for TOC flag field \c



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-04-30 17:27:27 UTC
Not reproducible anymore, tested usin win8.1 and libreoffice Version: 4.3.0.0.alpha1+
Build ID: 0b03f7ed575838f90e6b1ebec3538a3a214f81fb
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-30_01:30:46

Kind regards,
Joren